# lwr_project_creator

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  lwr_create_pkg  package.xml  setup.py
launch/: run_hw.launch
scripts/: lwr_create_pkg
src/lwr_project_creator/: pkg_creator.py  pkg_creator.py.bak  pkg_creator_gui.py  pkg_creator_tools.py
src/lwr_project_creator/template/@PROJECT_NAME@/: CMakeLists.txt  README.md  package.xml
src/lwr_project_creator/template/@PROJECT_NAME@/include/@PROJECT_NAME@/: @PROJECT_NAME@.hpp
src/lwr_project_creator/template/@PROJECT_NAME@/launch/: run.launch
src/lwr_project_creator/template/@PROJECT_NAME@/scripts/: run.ops  run_hw.ops  run_hw_standalone.ops  run_sim.ops  run_sim_conman.ops  run_sim_standalone.ops
src/lwr_project_creator/template/@PROJECT_NAME@/src/: @PROJECT_NAME@.cpp
