<?xml version="1.0"?>
<package>
  <name>lwr_project_creator</name>
  <version>2.0.0</version>
  <description>
    Simple controller package creator to hepl you start faster on the Kuka LWR
  </description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
