<?xml version="1.0"?>
<package>
  <name>@PROJECT_NAME@</name>
  <version>1.0.0</version>
  <description>The @PROJECT_NAME@ package</description>

  <maintainer email="hoarau.robotics@gmail.com">@AUTHOR@</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_lwr_abstract</build_depend>
  <build_depend>rtt_ros_kdl_tools</build_depend>
  <build_depend>lwr_utils</build_depend>
  <build_depend>kuka_lwr_fri</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_lwr_abstract</run_depend>
  <run_depend>rtt_ros_kdl_tools</run_depend>
  <run_depend>lwr_utils</run_depend>
  <run_depend>kuka_lwr_fri</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosparam</plugin_depend>
    </rtt_ros>
  </export>
</package>
