<?xml version="1.0"?>
<package>
  <name>@PROJECT_NAME@</name>
  <version>1.0.0</version>
  <description>The @PROJECT_NAME@ package</description>

  <maintainer email="hoarau.robotics@gmail.com">@AUTHOR@</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_ros_kdl_tools</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_ros_kdl_tools</run_depend>

  <export>
  </export>
</package>
